--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "Fungleo",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "express-formidable": "^1.2.0",
-    "js-yaml": "^3.13.1"
+    "images": "^3.0.2",
+    "js-yaml": "^3.13.1",
+    "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
+    "koa-json": "^2.0.2",
+    "to-type": "^1.1.1"
   },
   "devDependencies": {
     "electron": "^8.2.5",
