--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-json": "^2.0.2",
+    "koa2-cors": "^2.0.6",
     "to-type": "^1.1.1"
   },
   "devDependencies": {
