--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "build": "electron-packager ./ uploadImage --platform=darwin --out ./dist --app-version 0.0.1"
   },
   "repository": "https://github.com/fengcms/image-cdn-server-by-github",
   "author": "Fungleo",
@@ -16,11 +17,14 @@
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-json": "^2.0.2",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "to-type": "^1.1.1"
   },
   "devDependencies": {
     "electron": "^8.2.5",
+    "electron-packager": "^14.2.1",
+    "electron-rebuild": "^1.11.0",
     "electron-reloader": "^1.0.1",
     "eslint": "^6.8.0",
     "nodemon": "^2.0.4",
